--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -12,11 +12,13 @@
         height: 36px;
         background-color: transparent;
         margin-top: -36px;
-        display: none;
       }
       #ajax-indicator > div {
         margin: auto;
         width: 36px;
+      }
+      #ajax-indicator img {
+        display: none;
       }
     = yield :head
   %body
