--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -3,7 +3,7 @@
  *
  *= require_self
  *= require generic-table
- *= require jquery.fancybox
+ *= require jquery.fancybox-1.3.4
  */
 body {
   background-color: #4B7399; 
