--- a/app/views/admin/products/_upload_photos.html.erb
+++ b/app/views/admin/products/_upload_photos.html.erb
@@ -1,4 +1,4 @@
-<% form_for(:photo, :url => admin_photos_path, :html => { :multipart => true}) do |f| %>
+<%= form_for(:photo, :url => admin_photos_path, :html => { :multipart => true}) do |f| %>
 	<div style="margin-bottom:0.75em;">
 		Path to Photo: <%= f.file_field(:uploaded_photo, :size => 70) %>
 	</div>
